Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58110

QScreen::grabWindow(0) - inconsistent behaviour on Windows and Linux multi-monitor systems

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.9.0 Beta 2
    • 5.6.2
    • QPA: X11/XCB
    • None
    • Fedora 24 linux with Qt 5.7.1 and Windows 10 with Qt 5.6.2. Both 64-bit.
    • b6967d0c11a6f559350c105973780445e253d6b3 (qtbase/5.8, 26.1.2017, 5.8.1.)

    Description

      On Linux QScreen::grabWindow(0) grabs all monitors in one pixmap - on Windows the same function grabs the content of just the one screen. I think the Windows behaviour is least surprising.

      QScreen::grabWindow(0) is documented in the "Screenshot Example".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            ts Thomas Sondergaard
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes